# BatchRenderer

./: BatchRenderer.cpp  CMakeLists.txt
Dependencies/glew/lib/: libGLEW.so.2.2.0
res/shaders/: Basic.shader  Rectangle.shader  Texture.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: Test.cpp  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
tests/: CMakeLists.txt  Test.cpp  Test.h  TestClearColor.cpp  TestRectangle.cpp  TestRectangle.h  TestTexture2D.cpp  TestTexture2D.h  a_test.cc  a_test.cpp
